--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "Quinn Hoyer <quinn@themightyquinn.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "random-seed": "^0.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.15.0"
   }
 }
