--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.14.1",
+    "jquery": "^3.1.1",
     "random-seed": "^0.3.0"
   },
   "devDependencies": {
